--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=f, initial-scale=1.0">
-    <title>Search Images</title>
+	<title>Image Scrapper</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!--===============================================================================================-->
+
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/util.css') }}">
+
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='vendor/animate/animate.css') }}">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css"
+		href="{{ url_for('static', filename='vendor/css-hamburgers/hamburgers.min.css') }}">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css"
+		href="{{ url_for('static', filename='vendor/animsition/css/animsition.min.css') }}">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='vendor/select2/select2.min.css') }}">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css"
+		href="{{ url_for('static', filename='vendor/daterangepicker/daterangepicker.css') }}">
+
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/util.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+
+
+
+	<script src="{{ url_for('static', filename='js/main.js') }}"></script>
+
+
+	<!--===============================================================================================-->
 </head>
+
 <body>
-    <form action='' method="post">
-        <input type="text" name='query'>
-        <button type="submit">Search</button>
-    </form>
+
+	<div class="limiter">
+		<div class="container-login100" style="background-image: url('static/images/bg-01.jpg');">
+			<div class="wrap-login100 p-t-30 p-b-50">
+				<span class="login100-form-title p-b-41">
+					<a style="color: white;" href="http://github.com/Harshwardhanpjadhav/Image-Scrapping"
+						target="_blank">
+						<h2>GitHub</h2>
+					</a>
+
+					<a style="color: white;" href="https://www.linkedin.com/in/harshwardhanpj/" target="_blank">
+						<h2>LinkedIn</h2>
+					</a>
+
+					<hr>
+					<br>
+					<span class="login100-form-title p-b-41">
+
+						Image  Scrapper
+					</span>
+					<form action='/search' class="login100-form validate-form p-b-33 p-t-5" method="post">
+
+						<div class="wrap-input100 validate-input">
+							<input class="input100" type="text" name="query" placeholder="Search images">
+						</div>
+
+						<div class="container-login100-form-btn m-t-32">
+							<button class="login100-form-btn" type='submit'>
+								Download Images
+							</button>
+						</div>
+
+					</form>
+			</div>
+		</div>
+	</div>
+
+
+	<div id="dropDownSelect1"></div>
+
+	<!--===============================================================================================-->
+	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/animsition/js/animsition.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/bootstrap/js/popper.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/select2/select2.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/daterangepicker/moment.min.js"></script>
+	<script src="vendor/daterangepicker/daterangepicker.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/countdowntime/countdowntime.js"></script>
+	<!--===============================================================================================-->
+	<script src="js/main.js"></script>
+
 </body>
+
 </html>
